Populate Manage Users

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -21,6 +21,7 @@
     }
   },
   "profile": {
+    "title": "الملف الشخصي",
     "name": "الاسم",
     "email": "البريد الإلكتروني",
     "phone": "الهاتف",
@@ -35,7 +36,21 @@
     "submit": "تحديث"
   },
   "user": {
-    "name": "الاسم"
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "phone": "الهاتف",
+    "password": "كلمة المرور",
+    "role": "الدور",
+    "roles": {
+      "users": "المستخدمون",
+      "employees": "الموظفون",
+      "customers": "العملاء"
+    },
+    "user-role": {
+      "admin": "مدير",
+      "employee": "موظف",
+      "customer": "عميل"
+    }
   },
   "room": {
     "title": "العنوان",
