Make Dashboard as HomePage and Add Rreservations routerLink

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -10,6 +10,7 @@
       "register": "تسجيل"
     },
     "admin": {
+      "reservations": "الحجوزات",
       "manage-users": "إدارة المستخدمين",
       "rooms": "الغرف",
       "dashboard": "لوحة التحكم"
