--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,6 +10,7 @@
       "register": "Register"
     },
     "admin": {
+      "reservations": "Reservations",
       "manage-users": "Manage Users",
       "rooms": "Rooms",
       "dashboard": "Dashboard"
