Add View Profile, Keep Edit Profile in The Same Page, Add Styling and Default Pfp

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -23,6 +23,7 @@
   },
   "profile": {
     "title": "الملف الشخصي",
+    "edit-profile": "تعديل الملف الشخصي",
     "name": "الاسم",
     "email": "البريد الإلكتروني",
     "phone": "الهاتف",
@@ -35,6 +36,7 @@
     "password-min-length": "يجب أن تكون كلمة المرور 6 أحرف على الأقل",
     "password-match": " كلمات المرور غير متطابقة",
     "submit": "تحديث",
+    "cancel": "إلغاء",
     "add-employee": "إضافة موظف",
     "job-title": "المسمى الوظيفي",
     "job-required": "المسمى الوظيفي مطلوب"
