Add Room Component Translations

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -60,9 +60,14 @@
     "add-employee": "إضافة موظف"
   },
   "room": {
+    "rooms": "الغرف",
+    "add-room": "إضافة غرفة",
     "title": "العنوان",
     "type": "النوع",
     "floor": "الطابق",
+    "hotel": "الفندق",
+    "details": "النفاصيل",
+    "booked-status": "الحالة",
     "price": "السعر"
   },
   "reservation": {
