--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -72,6 +72,9 @@
     "price": "Price"
   },
   "reservation": {
+    "reservations": "Reservations",
+    "pending": "Pending",
+    "active": " Active",
     "pending-reservations": "Pending Reservations",
     "active-reservations": "Active Reservations"
   },
