--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -76,6 +76,7 @@
     "details": "Details",
     "booked-status": "Status",
     "price": "Price",
+    "location": "Loaction",
     "image-url": "Image URL",
     "title-required": "Title is required",
     "type-required": "Room Type is required",
@@ -83,6 +84,7 @@
     "hotel-required": "Hotel is required",
     "details-required": "Details is required",
     "price-required": "Price is required",
+    "location-required": "Loaction is required",
     "image-url-required": "Image URL is required",
     "submit": "Submit"
   },
@@ -103,7 +105,7 @@
     "english": "English",
     "arabic": "Arabic"
   },
-  "shared": {
+    "shared": {
     "entity": {
       "id": "ID"
     },
