--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -90,24 +90,28 @@
     "room-details": "تفاصيل الغرفة",
     "room-image": "صورة الغرفة",
     "delete-room": "حذف الغرفة",
-    "submit": "إضافة"
+    "submit": "إضافة",
+    "no-available-rooms": "لا يوجد غرف متاحة حاليا."
   },
   "reservation": {
     "reservations": "الحجوزات",
-    "pending": "المعلقة",
+    "pending": "المنتظرة",
     "active": " النشطة",
-    "pending-reservations": "الحجوزات المعلقة",
+    "pending-reservations": "الحجوزات في حالة الانتظار",
     "active-reservations": "الحجوزات النشطة",
     "reservation-details": "معلومات الحجز",
     "approve-reservation": "الموافقة على الحجز",
-    "reject-reservation": "رفض الحجز"
+    "reject-reservation": "رفض الحجز",
+    "no-pending-reservations": "لا يوجد حجوزات منتظرة",
+    "no-active-reservations": "لا يوجد حجوزات نشطة"
   },
   "service": {
     "services": "الخدمات",
     "title": "العنوان",
     "details": "التفاصيل",
     "price": "السعر",
-    "service-details": "تفاصيل الخدمة"
+    "service-details": "تفاصيل الخدمة",
+    "no-available-services": "لا يوجد خدمات متاحة حاليا"
   },
   "footer": {
     "english": "الإنجليزية",
