--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -77,7 +77,7 @@
     "details": "Details",
     "booked-status": "Status",
     "price": "Price",
-    "location": "Loaction",
+    "location": "Location",
     "image-url": "Image URL",
     "title-required": "Title is required",
     "type-required": "Room Type is required",
@@ -85,7 +85,7 @@
     "hotel-required": "Hotel is required",
     "details-required": "Details is required",
     "price-required": "Price is required",
-    "location-required": "Loaction is required",
+    "location-required": "Location is required",
     "image-url-required": "Image URL is required",
     "room-details": "Room Details",
     "room-image": "Room Image",
