Add Shared Form Translations

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -72,25 +72,17 @@
   "room": {
     "rooms": "الغرف",
     "add-room": "إضافة غرفة",
-    "title": "العنوان",
     "type": "النوع",
     "room": "غرفة",
     "hall": "قاعة",
     "floor": "الطابق",
     "hotel": "الفندق",
-    "details": "النفاصيل",
     "booked-status": "الحالة",
-    "price": "السعر",
     "location": "الموقع",
-    "image-url": "رابط الصورة",
-    "title-required": "العنوان مطلوب",
     "type-required": "نوع الغرفة مطلوب",
     "floor-required": "الطابق مطلوب",
     "hotel-required": "الفندق مطلوب",
-    "details-required": "التفاصيل مطلوبة",
-    "price-required": "السعر مطلوب",
     "location-required": "الموقع مطلوب",
-    "image-url-required": "رابط الصورة مطلوب",
     "room-details": "تفاصيل الغرفة",
     "room-image": "صورة الغرفة",
     "delete-room": "حذف الغرفة",
@@ -111,10 +103,7 @@
   },
   "service": {
     "services": "الخدمات",
-    "title": "العنوان",
     "type": "نوع الخدمة",
-    "details": "التفاصيل",
-    "price": "السعر",
     "service-details": "تفاصيل الخدمة",
     "delete-service": "حذف الخدمة",
     "no-available-services": "لا يوجد خدمات متاحة حاليا",
@@ -128,7 +117,8 @@
     "active-requests": "طلبات نشطة",
     "completed-requests": "طلبات المكتملة",
     "add-service": "إضافة خدمة",
-    "you-dont-have-services-to-provide": "لا يوجد لديك خدمات لتقدمها"
+    "you-dont-have-services-to-provide": "لا يوجد لديك خدمات لتقدمها",
+    "service-type-required": "نوع الخدمة مطلوب"
   },
   "footer": {
     "english": "الإنجليزية",
@@ -166,6 +156,16 @@
       "add": "إضافة",
       "submit": "إرسال",
       "go-back": "العودة"
+    },
+    "form": {
+      "title": "العنوان",
+      "title-required": "العنوان مطلوب",
+      "details": "التفاصيل",
+      "details-required": "التفاصيل مطلوبة",
+      "price": "السعر",
+      "price-required": "السعر مطلوب",
+      "image-url": "رابط الصورة",
+      "image-url-required": "رابط الصورة مطلوب"
     }
   }
 }
