--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -104,7 +104,7 @@
   "service": {
     "services": "Services",
     "type": "Type",
-    "service-details": "Service Details",
+    "edit-service": "Edit Service",
     "delete-service": "Delete Service",
     "no-available-services": "No available services at the moment.",
     "approve-request": "Approve Request",
