Populate EditService Component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -154,6 +154,7 @@
       "approve": "Approve",
       "reject": "Reject",
       "add": "Add",
+      "update": "Update",
       "submit": "Submit",
       "go-back": "Go Back"
     },
