--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -154,6 +154,7 @@
       "approve": "الموافقة",
       "reject": "رفض",
       "add": "إضافة",
+      "update": "تحديث",
       "submit": "إرسال",
       "go-back": "العودة"
     },
