Remove Reject Request Functionality and Show 'There Are No Requests' Instead of Showing The Element Based On Each Request Case

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -108,11 +108,8 @@
     "delete-service": "حذف الخدمة",
     "no-available-services": "لا يوجد خدمات متاحة حاليا",
     "approve-request": "الموافقة على الطلب",
-    "reject-request": "رفض الطلب",
     "complete-request": "إكمال الطلب",
-    "no-pending-requests": "لا توجد طلبات قيد الانتظار",
-    "no-active-requests": "لا توجد طلبات نشطة",
-    "no-completed-requests": "لا توجد طلبات مكتملة",
+    "there-are-no-requests": "لا توجد طلبات حاليا.",
     "pending-requests": "طلبات منتظرة",
     "active-requests": "طلبات نشطة",
     "completed-requests": "طلبات المكتملة",
