--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -108,11 +108,8 @@
     "delete-service": "Delete Service",
     "no-available-services": "No available services at the moment.",
     "approve-request": "Approve Request",
-    "reject-request": "Reject Request",
     "complete-request": "Complete Request",
-    "no-pending-requests": "There are No Pending Requests",
-    "no-active-requests": "There are No Active Requests",
-    "no-completed-requests": "There are No Completed Requests",
+    "there-are-no-requests": "There Are No Requests At The Moment.",
     "pending-requests": "Pending Requests",
     "active-requests": "Active Requests",
     "completed-requests": "Completed Requests",
