--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,6 +110,7 @@
     "approve-request": "Approve Request",
     "complete-request": "Complete Request",
     "there-are-no-requests": "There Are No Requests At The Moment.",
+    "there-are-no-services": "There Are No Services At The Moment.",
     "pending-requests": "Pending Requests",
     "active-requests": "Active Requests",
     "completed-requests": "Completed Requests",
