Add Not Found Page

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -165,6 +165,7 @@
       "price-required": "السعر مطلوب",
       "image-url": "رابط الصورة",
       "image-url-required": "رابط الصورة مطلوب"
-    }
+    },
+    "go-back-to-home-page": "الرجوع الى الصفخة الرئيسية"
   }
 }
