Add Delete and Edit Room Icons

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -71,7 +71,6 @@
   },
   "room": {
     "rooms": "الغرف",
-    "add-room": "إضافة غرفة",
     "type": "النوع",
     "room": "غرفة",
     "hall": "قاعة",
@@ -79,13 +78,15 @@
     "hotel": "الفندق",
     "booked-status": "الحالة",
     "location": "الموقع",
+    "add-room": "إضافة غرفة",
+    "edit-room": "تعديل الغرفة",
+    "delete-room": "حذف الغرفة",
     "type-required": "نوع الغرفة مطلوب",
     "floor-required": "الطابق مطلوب",
     "hotel-required": "الفندق مطلوب",
     "location-required": "الموقع مطلوب",
     "room-details": "تفاصيل الغرفة",
     "room-image": "صورة الغرفة",
-    "delete-room": "حذف الغرفة",
     "submit": "إضافة",
     "no-available-rooms": "لا يوجد غرف متاحة حاليا."
   },
