--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -71,7 +71,6 @@
   },
   "room": {
     "rooms": "Rooms",
-    "add-room": "Add Room",
     "type": "Type",
     "room": "Room",
     "hall": "Hall",
@@ -79,13 +78,15 @@
     "hotel": "Hotel",
     "booked-status": "Status",
     "location": "Location",
+    "add-room": "Add Room",
+    "edit-room": "Edit Room",
+    "delete-room": "Delete Room",
     "type-required": "Room Type required",
     "floor-required": "Floor required",
     "hotel-required": "Hotel required",
     "location-required": "Location required",
     "room-details": "Room Details",
     "room-image": "Room Image",
-    "delete-room": "Delete Room",
     "submit": "Submit",
     "no-available-rooms": "No available rooms at the moment."
   },
